--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
 ]
 dependencies = [
+    "ssh-proto-types>=0.1.3",
 ]
 
 [project.urls]
@@ -24,7 +25,9 @@ Repository = "https://github.com/KalleDK/py-ssh-key-mgr.git"
 
 [dependency-groups]
 test = [
+    "coverage>=7.10.7",
     "pytest>=8.4.2",
+    "pytest-cov>=7.0.0",
 ]
 stubs = []
 
