--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,10 +33,19 @@ crypto = [
 ]
 
 [dependency-groups]
+cli = [
+    "rich>=14.1.0",
+]
+crypto = [
+    "bcrypt>=5.0.0",
+    "pycryptodome>=3.23.0",
+]
 test = [
     "coverage>=7.10.7",
     "pytest>=8.4.2",
     "pytest-cov>=7.0.0",
+    {include-group = "crypto"},
+    {include-group = "cli"},
 ]
 stubs = []
 
