--- a/tox.ini
+++ b/tox.ini
@@ -3,10 +3,11 @@ requires =
     tox >= 4.20
 env_list =
     clean
-    3.13
-    3.13-nocrypto
+    3.14
+    3.14-crypto
 
-[testenv:3.13]
+[testenv:3.14-crypto]
+basepython = python3.14
 runner = uv-venv-lock-runner
 extras =
     crypto
@@ -16,7 +17,8 @@ dependency_groups =
 commands =
     uv run --active pytest -vv --cov-append
 
-[testenv:3.13-nocrypto]
+[testenv:3.14]
+basepython = python3.14
 runner = uv-venv-lock-runner
 dependency_groups =
     test
